--- a/src/main/resources/templates/chat/main.html
+++ b/src/main/resources/templates/chat/main.html
@@ -95,7 +95,7 @@
 </head>
 <body>
 <form action="/chat/match" method="post">
-    <h1>게임 선택하기</h1>
+    <h1>테스트</h1>
     <label for="game">게임 종류:</label>
     <select id="game" name="game" onchange="showOptions()">
         <option value="LOL">롤 (League of Legends)</option>
