GameFactory -> TreeFactory로 변경 전

--- a/src/main/resources/templates/chat/main.html
+++ b/src/main/resources/templates/chat/main.html
@@ -95,7 +95,7 @@
 </head>
 <body>
 <form action="/chat/match" method="post">
-    <h1>게임 선택하기9</h1>
+    <h1>게임 선택하기 tree</h1>
     <label for="game">게임 종류:</label>
     <select id="game" name="game" onchange="showOptions()">
         <option value="LOL">롤 (League of Legends)</option>
@@ -106,7 +106,7 @@
     <div id="gameOptions" class="game-option">
         <!-- 롤 옵션 -->
         <label>게임 타입:</label>
-        <select name="rank">
+        <select name="isRank">
             <option value="NORMAL">일반게임</option>
             <option value="RANK">랭크게임</option>
         </select>
