--- a/src/main/resources/templates/chat/room.html
+++ b/src/main/resources/templates/chat/room.html
@@ -187,7 +187,7 @@
         <div class="options">
             <!-- 게임 옵션 표시 -->
             <p>게임종류: <span id="game">[[${room.game}]]</span></p>
-            <p>게임타입: <span id="gameType">[[${room.rank}]] - [[${room.gameType}]]</span></p>
+            <p>게임타입: <span id="gameType">[[${room.IsRank}]] - [[${room.gameType}]]</span></p>
             <p>티어: <span id="tier">[[${room.tier}]]</span></p>
             <p>인원수:<span id="currentPlayers">[[${room.currentPlayer}]]</span> / <span id="maxPlayers">[[${room.maxPlayer}]]</span></p>
             <p>구하는 라인: <span id="lineList">[[${room.lineList}]]</span></p>
