--- a/src/main/resources/templates/chat/main.html
+++ b/src/main/resources/templates/chat/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>게임 선택1</title>
+    <title>게임 선택</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -111,7 +111,7 @@
 </head>
 <body>
 <form action="/chat/match" method="post">
-    <h1>게임 선택하기</h1>
+    <h1>게임 선택하기1</h1>
     <label for="game">게임 종류:</label>
     <select id="game" name="game" onchange="showOptions()">
         <option value="LOL">롤 (League of Legends)</option>
